fixed shadcn components imports and supplemented button component

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,7 @@
       "@/*": ["./*"],
       "@/components/*": ["./components/*"],
       "@/ui/*": ["./components/ui/*"],
+      "@/elements/*": ["./components/elements/*"],
       "@/types/*": ["./shared/types/*"],
       "@/hooks/*": ["./hooks/*"],
       "@/lib/*": ["./lib/*"],
