--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -3,5 +3,8 @@
   "tabWidth": 2,
   "semi": true,
   "singleQuote": true,
+  "printWidth": 115,
+  "arrowParents": "avoid",
+  "bracketSameLine": true,
   "plugins": ["prettier-plugin-tailwindcss"]
 }
