--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-hook-form": "^7.60.0",
     "react-use": "^17.6.0",
     "tailwind-merge": "^3.3.1",
-    "zod": "^4.0.5"
+    "zod": "^4.0.5",
+    "zustand": "^5.0.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
